2. Implementing Security Best Practices in Django

--- a/advanced_features_and_security/LibraryProject/relationship_app/templates/relationship_app/librarian_view.html
+++ b/advanced_features_and_security/LibraryProject/relationship_app/templates/relationship_app/librarian_view.html
@@ -7,5 +7,11 @@
 <body>
     <h1>Welcome Librarian {{ user.username }}</h1>
     <p>You can manage library books and users.</p>
+    <form method="post" action="">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Submit</button>
+    </form>
+
 </body>
 </html>
