--- a/advanced_features_and_security/LibraryProject/relationship_app/templates/relationship_app/library_detail.html
+++ b/advanced_features_and_security/LibraryProject/relationship_app/templates/relationship_app/library_detail.html
@@ -15,5 +15,10 @@
         <li>No books available in this library.</li>
         {% endfor %}
     </ul>
+    <form method="post" action="">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
