--- a/advanced_features_and_security/LibraryProject/relationship_app/templates/relationship_app/register.html
+++ b/advanced_features_and_security/LibraryProject/relationship_app/templates/relationship_app/register.html
@@ -14,5 +14,10 @@
         {{ form.as_p }}
         <button type="submit">Register</button>
     </form>
+    <form method="post" action="">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
