--- a/advanced_features_and_security/LibraryProject/relationship_app/templates/relationship_app/admin_view.html
+++ b/advanced_features_and_security/LibraryProject/relationship_app/templates/relationship_app/admin_view.html
@@ -7,5 +7,10 @@
 <body>
     <h1>Welcome Admin {{ user.username }}</h1>
     <p>You have full control over the system.</p>
+    <form method="post" action="">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
