--- a/advanced_features_and_security/LibraryProject/relationship_app/templates/relationship_app/list_books.html
+++ b/advanced_features_and_security/LibraryProject/relationship_app/templates/relationship_app/list_books.html
@@ -14,5 +14,10 @@
         <li>No books available.</li>
         {% endfor %}
     </ul>
+    <form method="post" action="">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
