--- a/advanced_features_and_security/LibraryProject/relationship_app/templates/relationship_app/logout.html
+++ b/advanced_features_and_security/LibraryProject/relationship_app/templates/relationship_app/logout.html
@@ -8,5 +8,10 @@
 <body>
     <h1>You have been logged out</h1>
     <a href="{% url 'login' %}">Login again</a>
+    <form method="post" action="">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
