--- a/advanced_features_and_security/LibraryProject/relationship_app/templates/relationship_app/password_change.html
+++ b/advanced_features_and_security/LibraryProject/relationship_app/templates/relationship_app/password_change.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-
+<form method="post" action="">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
