--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -42,6 +42,13 @@
 {% else %}
   <p><a href="{% url 'login' %}">Login</a> to add a comment.</p>
 {% endif %}
+<p><strong>Tags:</strong>
+  {% for tag in post.tags.all %}
+    <a href="{% url 'posts-by-tag' tag.name %}">#{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
+  {% empty %}
+    No tags
+  {% endfor %}
+</p>
 
 </body>
 </html>
